--- a/index.html
+++ b/index.html
@@ -7,63 +7,65 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/bootstrap-grid.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="js/popper.min.js"></script>
-    crossorigin="anonymous"></script>
-   <script src="./js/jquery-3.6.1.min.js"></script>
-  <script src="./js/bootstrap.min.js" crossorigin="anonymous"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="./js/jquery-3.6.1.min.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
   <script src="./js/bootstrap.bundle.min.js"></script>
   <title>Document</title>
 
   <script>
-  $(document).ready(function(){
-      $('a[data-bs-toggle="tab"]').on("shown.bs.tab", function(e){
-          var activeTab = $(e.target).text(); // Get the name of active tab
-          var previousTab = $(e.relatedTarget).text(); // Get the name of previous active tab
-          $(".active-tab span").html(activeTab);
-          $(".previous-tab span").html(previousTab);
+    $(document).ready(function () {
+      $('a[data-bs-toggle="tab"]').on("shown.bs.tab", function (e) {
+        var activeTab = $(e.target).text(); // Get the name of active tab
+        var previousTab = $(e.relatedTarget).text(); // Get the name of previous active tab
+        $(".active-tab span").html(activeTab);
+        $(".previous-tab span").html(previousTab);
       });
-  });
+    });
   </script>
-  </head>
-  <body>
-  <div class="m-4">
-      <ul id="myTab" class="nav nav-tabs">
-          <li class="nav-item">
-              <a href="#home" class="nav-link active" data-bs-toggle="tab">Part 4</a>
-          </li>
-          <li class="nav-item">
-              <a href="#profile" class="nav-link" data-bs-toggle="tab">Profile</a>
-          </li>
-          <li class="nav-item">
-              <a href="#messages" class="nav-link" data-bs-toggle="tab">Messages</a>
-          </li>
-      </ul>
-      <div class="tab-content">
-          <div class="tab-pane fade show active" id="home">
-              
-<h3>Part 4</h3>
-<p>Module 1 Cost of Capital</p>
-<a href="./corporateissuers.html">Vocabulary</a>
-<ul class="list-group">
-  <li class="list-group-item ">
+</head>
 
-    Cost of capital </li>
-  <li class="list-group-item">Capital Structure</li>
-  <li class="list-group-item">Morbi leo risus</li>
-  <li class="list-group-item">Porta ac consectetur ac</li>
-  <li class="list-group-item">Vestibulum at eros</li>
-</ul>
-          </div>
-          <div class="tab-pane fade" id="profile">
-              <h4 class="mt-2">Profile tab content</h4>
-          </div>
-          <div class="tab-pane fade" id="messages">
-              <h4 class="mt-2">Messages tab content</h4>
-          </div>
+<body>
+  <div class="m-4">
+    <ul id="myTab" class="nav nav-tabs">
+      <li class="nav-item">
+        <a href="#home" class="nav-link active" data-bs-toggle="tab">Part 4</a>
+      </li>
+      <li class="nav-item">
+        <a href="#profile" class="nav-link" data-bs-toggle="tab">Profile</a>
+      </li>
+      <li class="nav-item">
+        <a href="#messages" class="nav-link" data-bs-toggle="tab">Messages</a>
+      </li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane fade show active" id="home">
+
+        <h3>Part 4</h3>
+        <p>Module 1 Cost of Capital</p>
+        <a href="./corporateissuers.html">Vocabulary</a>
+        <ul class="list-group">
+          <li class="list-group-item ">
+
+            Cost of capital </li>
+          <li class="list-group-item">Capital Structure</li>
+          <li class="list-group-item">Morbi leo risus</li>
+          <li class="list-group-item">Porta ac consectetur ac</li>
+          <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
       </div>
-      <hr>
+      <div class="tab-pane fade" id="profile">
+        <h4 class="mt-2">Profile tab content</h4>
+      </div>
+      <div class="tab-pane fade" id="messages">
+        <h4 class="mt-2">Messages tab content</h4>
+      </div>
+    </div>
+    <hr>
   </div>
-  </body>
+</body>
 
 </html>
 
+https://analystnotes.com/cfa-exam-2022.html
+https://ift.world/booklets/corporate-finance-cost-of-capital-part1/
